Add layout for ListView rows Add custom ArrayAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ListView</string>
+    <string name="preview_description">Image preview</string>
 </resources>
