--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ListView</string>
+    <string name="error_message">Failed to get results. Please try again.</string>
     <string name="preview_description">Image preview</string>
 </resources>
