--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ListView</string>
     <string name="error_message">Failed to get results. Please try again.</string>
+    <string name="main_notification_channel_name">Primary</string>
     <string name="preview_description">Image preview</string>
 </resources>
